# graphify-hardened

./: .gitignore  FORK.md  README.md  RELEASING.md  SECURITY.md  THANKS.md  pyproject.toml
.github/workflows/: audit.yml  ci.yml
.opencode/plugins/: graphify.js
audit/: api-key-handling-review.md  deserialization-review.md  html-output-review.md  office-pdf-hardening.md  osv-scanner-2026-04-30.txt  phase3-task3.7-status-crossref.md  phase4-task4.6-status-crossref.md  re-emission-surfaces.md  skill-installer-review.md  subprocess-review.md  tool-versions.txt  uv-tree-2026-04-30.txt  vis-network-pin.txt
docs/: AUDIT_LOG.md
graphify/: __main__.py  audit.py  build.py  cache.py  detect.py  export.py  hooks.py  ingest.py  injection.py  install_plan.py  llm.py  security.py  serve.py  transcribe.py  untrusted.py  validate.py  watch.py
tests/: conftest.py  test_audit.py  test_audit_failure.py  test_audit_wiring.py  test_build.py  test_cache.py  test_cache_safety.py  test_clone.py  test_export.py  test_ingest.py  test_injection.py  test_injection_e2e.py  test_install.py  test_install_dry_run.py  test_install_plan.py  test_install_round_trip.py  test_llm_api_key_scrub.py  test_lockfile.py  test_office_pdf_hardening.py  test_security.py  test_status.py  test_subprocess_safety.py  test_untrusted_corpus.py  test_untrusted_framing.py  test_validate.py
